k8s/platform-stack/ingress/ingress-argocd-ns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-app-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ecommerce-app-argocd-himanshu1234.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server-clusterip
            # name: k8s-automation-svc
            port:
              number: 8080
